--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-./Calibration_ZhangZhengyou_Method/opencv_save_img/imgs
-./Calibration_ZhangZhengyou_Method/pic
+Calibration_ZhangZhengyou_Method/opencv_save_img/imgs
+Cialibration_ZhangZhengyou_Method/pic
+*.png
+*.jpg
